--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.resx
@@ -480,4 +480,10 @@
   <data name="dialogFourFirstTurn" xml:space="preserve">
     <value>To move a piece, you first need to place your Queen.</value>
   </data>
+  <data name="dialogDrawMatchResult" xml:space="preserve">
+    <value>Match has finished there was a draw, well played.</value>
+  </data>
+  <data name="DialogWinnerMessage" xml:space="preserve">
+    <value>The match has finished the winner is </value>
+  </data>
 </root>
