--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
@@ -504,4 +504,7 @@
   <data name="Uri" xml:space="preserve">
     <value>pack://siteoforigin:,,,/Video/VideoMenu.mp4</value>
   </data>
+  <data name="dialogErrorConnection" xml:space="preserve">
+    <value>Connection to the server has been lost. You will be returned to login.</value>
+  </data>
 </root>
