Se corrigieron las excepciones ya que todos eran de tipor error pero algunos eran fatal

--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.es-MX.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.es-MX.resx
@@ -507,4 +507,7 @@
   <data name="dialogErrorConnection" xml:space="preserve">
     <value>Se ha perdido la conexión con el servidor. Volverás al inicio de sesión.</value>
   </data>
+  <data name="dialogLostConnection" xml:space="preserve">
+    <value> ha perdido la conexión. Serás redirigido.</value>
+  </data>
 </root>
