--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
@@ -507,4 +507,7 @@
   <data name="dialogErrorConnection" xml:space="preserve">
     <value>Connection to the server has been lost. You will be returned to login.</value>
   </data>
+  <data name="dialogLostConnection" xml:space="preserve">
+    <value> has lost connection. You will be redirected.</value>
+  </data>
 </root>
