Arreglo de código apegado al estandar

--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
@@ -160,7 +160,7 @@
     <value>Try again waiting time has expired. Please check your connection to the server.</value>
   </data>
   <data name="dialogDataBaseError" xml:space="preserve">
-    <value>An error has ocurred with the database, please try again.</value>
+    <value>An error has ocurred connecting with the database, please try again.</value>
   </data>
   <data name="dialogWrongData" xml:space="preserve">
     <value>The information that you type is incorrect, try it again.</value>
@@ -509,5 +509,8 @@
   </data>
   <data name="dialogLostConnection" xml:space="preserve">
     <value> has lost connection. You will be redirected.</value>
+  </data>
+  <data name="dialogCouldntSaveMatchInfo" xml:space="preserve">
+    <value>An error has ocurred trying to connect with the data base. Couldn't save match results.</value>
   </data>
 </root>
