--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.es-MX.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.es-MX.resx
@@ -160,7 +160,7 @@
     <value>El tiempo de espera ha caducado, inténtelo de nuevo. Por favor cheque su conexión a internet.</value>
   </data>
   <data name="dialogDataBaseError" xml:space="preserve">
-    <value>Ha ocurrido un error en la base</value>
+    <value>Ha ocurrido un error al intentar establecer conexión con la base de datos. </value>
   </data>
   <data name="dialogWrongData" xml:space="preserve">
     <value>La información que ha ingresado es incorrecta. Intentelo de nuevo.</value>
@@ -509,5 +509,8 @@
   </data>
   <data name="dialogLostConnection" xml:space="preserve">
     <value> ha perdido la conexión. Serás redirigido.</value>
+  </data>
+  <data name="dialogCouldntSaveMatchInfo" xml:space="preserve">
+    <value>Ha ocurrido un error intentando conectarse a la base de datos. No se ha podido guardar los datos de la partida.</value>
   </data>
 </root>
