--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.resx
@@ -331,7 +331,7 @@
     <value>Join match</value>
   </data>
   <data name="globalTxtb_PasswordIndications" xml:space="preserve">
-    <value>Remember that your password must contain at least 8 characters. Including at least 1 number, 1 capital letter, 1 lowercase letter and 1 special character.</value>
+    <value>Remember that your password must contain at least 8 characters. Including at least 1 number, 1 capital letter, 1 lowercase letter and 1 special character. Remember it cannot include white spaces.</value>
   </data>
   <data name="lbl_TitleRecoverPassword" xml:space="preserve">
     <value>Recover Password</value>
