--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
@@ -331,7 +331,7 @@
     <value>Join match</value>
   </data>
   <data name="globalTxtb_PasswordIndications" xml:space="preserve">
-    <value>Remember that your password must contain at least 8 characters. Including at least 1 number, 1 capital letter, 1 lowercase letter and 1 special character. Remember it cannot include white spaces.</value>
+    <value>Remember that your password must contain at least 8 characters. Including at least 1 number, 1 capital letter, 1 lowercase letter and 1 special character.</value>
   </data>
   <data name="lbl_TitleRecoverPassword" xml:space="preserve">
     <value>Recover Password</value>
@@ -508,9 +508,12 @@
     <value>Connection to the server has been lost. You will be returned to login.</value>
   </data>
   <data name="dialogLostConnection" xml:space="preserve">
-    <value> has lost connection. You will be redirected.</value>
+    <value>"You have lost connection to the services and will not be able to continue the game. The game will be terminated. We apologize for the inconvenience."</value>
   </data>
   <data name="dialogCouldntSaveMatchInfo" xml:space="preserve">
     <value>An error has ocurred trying to connect with the data base. Couldn't save match results.</value>
+  </data>
+  <data name="dialogTimeOutExceptionGameBoard" xml:space="preserve">
+    <value>"The connection to the services has been lost. For security reasons and to protect your progress, you will be redirected to login. Please check your internet connection and try again. We apologize for the inconvenience."</value>
   </data>
 </root>
