--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.es-MX.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.es-MX.resx
@@ -151,7 +151,8 @@
     <value>Confirmación de acción</value>
   </data>
   <data name="dialogEndPointException" xml:space="preserve">
-    <value>Fallo al encontrar el punto de acceso. Por favor cheque la configuración al servidor e inténtelo de nuevo.</value>
+    <value>No se pudo establecer conexión con el servidor. Por favor, verifique la configuración de red e intente nuevamente.
+</value>
   </data>
   <data name="dialogComunicationException" xml:space="preserve">
     <value>Se ha producido un fallo para establecer la conexión al servidor. Cheque su conexión a internet e inténtelo de nuevo</value>
